[gd_scene load_steps=4 format=3 uid="uid://be8ohecle4tkv"]

[ext_resource type="Script" path="res://system-generator/components/star.gd" id="1_c7ruq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_35uaa"]
shading_mode = 0

[sub_resource type="SphereShape3D" id="SphereShape3D_jr6ye"]
resource_local_to_scene = true

[node name="Star" type="CSGSphere3D"]
radius = 10.0
material = SubResource("StandardMaterial3D_35uaa")
script = ExtResource("1_c7ruq")
mass = 1.0

[node name="OmniLight3D" type="OmniLight3D" parent="."]
omni_range = 1e+12
omni_attenuation = 0.0

[node name="HoverDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HoverDetector"]
shape = SubResource("SphereShape3D_jr6ye")

[node name="StarDetails" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="Panel" type="Panel" parent="StarDetails"]
layout_mode = 2
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -120.0
offset_right = 474.0
offset_bottom = 105.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StarDetails/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[connection signal="input_event" from="HoverDetector" to="." method="_on_hover_detector_input_event"]
[connection signal="mouse_entered" from="HoverDetector" to="." method="_on_hover_detector_mouse_entered"]
[connection signal="mouse_exited" from="HoverDetector" to="." method="_on_hover_detector_mouse_exited"]
